fixed 2nd sect responsiveness

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img class="rounded"
                src="https://e-cdns-images.dzcdn.net/images/artist/6b2aa164cdad314d313833d536c6d3b7/500x500-000000-80-0-0.jpg"
                alt="Card image">
-            <div class="card-body p-5">
+            <div class="card-body p-5 text-center text-lg-start">
                <h4 class="card-title display-5">Nome canzone</h4>
                <h5 class="card-title my-5">Artista</h5>
                <p class="card-text my-4 fst-italic">da: </p>
