fixed headings responsiveness

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="text-center text-primary fw-bold my-3">Deezer Selection - Vincenzo Maiorana</h1>
 
       <div id="firstSection" class="container mb-5">
-         <h2 class="mb-3">Favourite Top 4</h2>
+         <h2 class="mb-3 text-center text-lg-start">Favourite Top 4</h2>
          <div id="cardsTop4" class="d-flex row align-items-center justify-content-center">
 
             <div class="card text-white bg-dark m-3 rounded" style="width: 18rem;">
@@ -35,7 +35,7 @@
       </div>
       </div>
       <div id="secondSection" class="container mb-5">
-         <h2 class="mb-3">1st Favourite Song</h2>
+         <h2 class="mb-3 text-center text-lg-start">1st Favourite Song</h2>
          <div class="favSong d-flex align-items-center justify-content-center rounded mb-5 flex-wrap">
             <img class="rounded"
                src="https://e-cdns-images.dzcdn.net/images/artist/6b2aa164cdad314d313833d536c6d3b7/500x500-000000-80-0-0.jpg"
@@ -50,7 +50,7 @@
                </audio>
             </div>
          </div>
-         <div id="thirdSection" class=" mb-5">
+         <div id="thirdSection" class="text-center text-lg-start mb-5">
             <h2 class="mb-3">Favourite Albums</h2>
 
 
