fixed album carousel responsiveness

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                </audio>
             </div>
          </div>
-         <div id="thirdSection" class="text-center text-lg-start mb-5">
-            <h2 class="mb-3">Favourite Albums</h2>
+         <div id="thirdSection" class="mb-5 d-flex flex-column justify-content-center align-items-center">
+            <h2 class="mb-3 text-center text-lg-start">Favourite Albums</h2>
 
 
             <div id="carouselAlbums" class="carousel slide carousel-fade" data-ride="carousel">
