--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   <li data-target="#carouselAlbums" data-slide-to="1"></li>
                   <li data-target="#carouselAlbums" data-slide-to="2"></li>
                </ol>
-               <div class="carousel-inner">
+               <div id="albumItems" class="carousel-inner">
                   <div class="carousel-item active">
                      <img class="d-block w-100"
                         src="https://e-cdns-images.dzcdn.net/images/artist/6b2aa164cdad314d313833d536c6d3b7/1000x1000-000000-80-0-0.jpg"
