--- a/index.html
+++ b/index.html
@@ -54,37 +54,26 @@
             <h2 class="mb-3 text-center text-lg-start">Favourite Albums</h2>
 
 
-            <div id="carouselAlbums" class="carousel slide carousel-fade" data-ride="carousel">
-               <ol class="carousel-indicators">
-                  <li data-target="#carouselAlbums" data-slide-to="0" class="active"></li>
-                  <li data-target="#carouselAlbums" data-slide-to="1"></li>
-                  <li data-target="#carouselAlbums" data-slide-to="2"></li>
-               </ol>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                <div id="albumItems" class="carousel-inner">
-                  <div class="carousel-item active">
-                     <img class="d-block w-100"
-                        src="https://e-cdns-images.dzcdn.net/images/artist/6b2aa164cdad314d313833d536c6d3b7/1000x1000-000000-80-0-0.jpg"
-                        alt="First slide">
+
+                  <div class="carousel-item">
+                     <img src="..." class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                     <img class="d-block w-100"
-                        src="https://e-cdns-images.dzcdn.net/images/artist/6b2aa164cdad314d313833d536c6d3b7/1000x1000-000000-80-0-0.jpg"
-                        alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                     <img class="d-block w-100"
-                        src="https://e-cdns-images.dzcdn.net/images/artist/6b2aa164cdad314d313833d536c6d3b7/1000x1000-000000-80-0-0.jpg"
-                        alt="Third slide">
+                     <img src="..." class="d-block w-100" alt="...">
                   </div>
                </div>
-               <a class="carousel-control-prev" href="#carouselAlbums" role="button" data-slide="prev">
+               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                  data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only"></span>
-               </a>
-               <a class="carousel-control-next" href="#carouselAlbums" role="button" data-slide="next">
+                  <span class="visually-hidden">Previous</span>
+               </button>
+               <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                  data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only"></span>
-               </a>
+                  <span class="visually-hidden">Next</span>
+               </button>
             </div>
 
 
