--- a/index.html
+++ b/index.html
@@ -78,6 +78,46 @@
 
 
          </div>
+
+         <div class="container">
+            <div class="row d-flex justify-content-center">
+               <div class="col-2  d-flex justify-content-center">
+                  <button type="button" class="btn btn-primary" onclick="getAllInList()" data-bs-toggle="modal"
+                     data-bs-target="#albums">Mostra
+                     Elenco</button>
+               </div>
+               <div class="col-2 offset-2  d-flex justify-content-center">
+                  <button type="button" class="btn btn-primary" onclick="showBestRankAlert()">Mostra Rank</button>
+               </div>
+            </div>
+
+
+
+            <div class="modal fade" id="albums" tabindex="-1" aria-labelledby="albumsLabel" aria-hidden="true">
+               <div class="modal-dialog">
+                  <div class="modal-content">
+                     <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="albumsLabel">Elenco Album e Canzoni della Pagina</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                     </div>
+                     <div class="modal-body" id="modalAlbumsBody">
+                        ...
+                     </div>
+                     <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                     </div>
+                  </div>
+               </div>
+            </div>
+
+
+         </div>
+
+         <div class="alert alert-primary" role="alert" id="rankAlert">
+            La miglior Canzone è questa
+         </div>
+
+
    </main>
    <script src="./assets/index.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
