--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
          <div id="cardsTop4" class="d-flex row align-items-center justify-content-center">
 
             <div class="card text-white bg-dark m-3 rounded" style="width: 18rem;">
-               <img class="card-img-top mt-3"
-                  src="https://e-cdns-images.dzcdn.net/images/artist/6b2aa164cdad314d313833d536c6d3b7/500x500-000000-80-0-0.jpg"
+               <img class="card-img-top mt-3" src="https://fakeimg.pl/350x350/?text=Loading&font=lobster"
                   alt="Card image cap">
                <div class="card-body">
-                  <h5 class="card-title">Title</h5>
-                  <p class="card-text">Artist</p>
+                  <h5 class="card-title">Loading</h5>
+                  <p class="card-text">Loading</p>
                </div>
             </div>
 
@@ -37,16 +36,13 @@
       <div id="secondSection" class="container mb-5">
          <h2 class="mb-3 text-center text-lg-start">1st Favourite Song</h2>
          <div class="favSong d-flex align-items-center justify-content-center rounded mb-5 flex-wrap">
-            <img class="rounded"
-               src="https://e-cdns-images.dzcdn.net/images/artist/6b2aa164cdad314d313833d536c6d3b7/500x500-000000-80-0-0.jpg"
-               alt="Card image">
+            <img class="rounded" src="https://fakeimg.pl/350x350/?text=Loading&font=lobster" alt="Card image">
             <div class="card-body p-5 text-center text-lg-start">
-               <h4 class="card-title display-5">Nome canzone</h4>
-               <h5 class="card-title my-5">Artista</h5>
-               <p class="card-text my-4 fst-italic">da: </p>
+               <h4 class="card-title display-5">Loading</h4>
+               <h5 class="card-title my-5">Loading</h5>
+               <p class="card-text my-4 fst-italic">da: Loading</p>
                <audio controls class="rounded bg-primary">
-                  <source src="https://cdns-preview-4.dzcdn.net/stream/c-4da817e65812bc019dcb18d7fd76ae39-3.mp3"
-                     type="audio/mpeg">
+                  <source src="#" type="audio/mpeg">
                </audio>
             </div>
          </div>
@@ -58,10 +54,10 @@
                <div id="albumItems" class="carousel-inner">
 
                   <div class="carousel-item">
-                     <img src="..." class="d-block w-100" alt="...">
+                     <img src="https://fakeimg.pl/350x350/?text=Loading&font=lobster" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                     <img src="..." class="d-block w-100" alt="...">
+                     <img src="https://fakeimg.pl/350x350/?text=Loading&font=lobster" class="d-block w-100" alt="...">
                   </div>
                </div>
                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
